package resources.generated;

option java_outer_classname = "ScalaBuffMessageTest";

option optimize_for = LITE_RUNTIME;

message EmptyMessage {
}